Added navigation to the HTML file
Added navigation to the HTML file based on feedback from jr in the POV-Ray newsgroup povray.binaries.utilities.

--- a/Documentation/farger.inc.html
+++ b/Documentation/farger.inc.html
@@ -12,7 +12,24 @@ th, td {
 </style>
 </head>
 <body>
-<h2>Crayola&trade; Colors</h2>
+  <header>
+    <h1><a name='nav_toc'>farger.inc</a></h1>
+    <nav>
+      <ul>
+        <li><a href='#tbl_cray'>Crayola&trade; Colors</a></li>
+        <li><a href='#tbl_cray_alt'>Alternative Crayola&trade; color names</a></li>
+        <li><a href='#tbl_farge'>farge colors</a></li>
+        <li><a href='#tbl_farge_alt'>Alternative farge color names</a></li>
+        <li><a href='#tbl_html'>Named HTML color names</a></li>
+        <li><a href='#tbl_html_alt'>Alternative HTML color names</a></li>
+        <li><a href='#tbl_x11'>X11 color names</a></li>
+        <li><a href='#tbl_x11_alt'>Alternative X11 color names</a></li>
+        <li><a href='#tbl_lego'>Official LEGO&trade; Colors</a></li>
+        <li><a href='#tbl_pantone'>PANTONE&trade; Coated colors</a></li>
+      </ul>
+    </nav>
+  </header>
+<h2><a name='tbl_cray'></a>Crayola&trade; Colors</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>Crayola_Absolute_Zero</td><td>#0048BA</td><td width="150" style="background-color:#0048BA"></td></tr>
 <tr><td>Crayola_Acid_Wash_Jeans</td><td>#5CB2C5</td><td width="150" style="background-color:#5CB2C5"></td></tr>
@@ -301,7 +318,8 @@ th, td {
 <tr><td>Crayola_Yellow_Orange</td><td>#FFAE42</td><td width="150" style="background-color:#FFAE42"></td></tr>
 <tr><td>Crayola_Yellow_Sunshine</td><td>#FFF700</td><td width="150" style="background-color:#FFF700"></td></tr>
 </table>
-<h2>Alternative Crayola&trade; color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_cray_alt'></a>Alternative Crayola&trade; color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>Crayola_Azure_Blue_1949_1958</td><td>#2EB4E6</td><td width="150" style="background-color:#2EB4E6"></td></tr>
 <tr><td>Crayola_Baby_Powder</td><td>#FFFFFF</td><td width="150" style="background-color:#FFFFFF"></td></tr>
@@ -420,7 +438,8 @@ th, td {
 <tr><td>Crayola_White</td><td>#FFFFFF</td><td width="150" style="background-color:#FFFFFF"></td></tr>
 <tr><td>Crayola_Winter_Sky</td><td>#FF00CC</td><td width="150" style="background-color:#FF00CC"></td></tr>
 </table>
-<h2>farge colors</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_farge'></a>farge colors</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>farge_Acid_Green</td><td>#B0BF1A</td><td width="150" style="background-color:#B0BF1A"></td></tr>
 <tr><td>farge_Aero</td><td>#7CB9E8</td><td width="150" style="background-color:#7CB9E8"></td></tr>
@@ -1547,7 +1566,8 @@ th, td {
 <tr><td>farge_Zinnwaldite_Brown</td><td>#2C1607</td><td width="150" style="background-color:#2C1607"></td></tr>
 <tr><td>farge_Zomp</td><td>#39A78E</td><td width="150" style="background-color:#39A78E"></td></tr>
 </table>
-<h2>Alternative farge color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_farge_alt'>Alternative farge color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>Farge_Aqua</td><td>#00FFFF</td><td width="150" style="background-color:#00FFFF"></td></tr>
 <tr><td>Farge_Cool_Black</td><td>#000000</td><td width="150" style="background-color:#000000"></td></tr>
@@ -1555,7 +1575,8 @@ th, td {
 <tr><td>Farge_Fuchsia</td><td>#FF00FF</td><td width="150" style="background-color:#FF00FF"></td></tr>
 <tr><td>Farge_Spanish_Sky_Blue</td><td>#00FFFF</td><td width="150" style="background-color:#00FFFF"></td></tr>
 </table>
-<h2>Named HTML color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_html'>Named HTML color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>HTML_Gray</td><td>#808080</td><td width="150" style="background-color:#808080"></td></tr>
 <tr><td>HTML_Green</td><td>#008000</td><td width="150" style="background-color:#008000"></td></tr>
@@ -1566,7 +1587,8 @@ th, td {
 <tr><td>HTML_Silver</td><td>#C0C0C0</td><td width="150" style="background-color:#C0C0C0"></td></tr>
 <tr><td>HTML_Teal</td><td>#008080</td><td width="150" style="background-color:#008080"></td></tr>
 </table>
-<h2>Alternative HTML color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_html_alt'>Alternative HTML color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>HTML_Aqua</td><td>#00FFFF</td><td width="150" style="background-color:#00FFFF"></td></tr>
 <tr><td>HTML_Black</td><td>#000000</td><td width="150" style="background-color:#000000"></td></tr>
@@ -1577,7 +1599,8 @@ th, td {
 <tr><td>HTML_White</td><td>#FFFFFF</td><td width="150" style="background-color:#FFFFFF"></td></tr>
 <tr><td>HTML_Yellow</td><td>#FFFF00</td><td width="150" style="background-color:#FFFF00"></td></tr>
 </table>
-<h2>X11 color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_x11'>X11 color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>X11_Alice_Blue</td><td>#F0F8FF</td><td width="150" style="background-color:#F0F8FF"></td></tr>
 <tr><td>X11_Antique_White</td><td>#FAEBD7</td><td width="150" style="background-color:#FAEBD7"></td></tr>
@@ -1714,7 +1737,8 @@ th, td {
 <tr><td>X11_White_Smoke</td><td>#F5F5F5</td><td width="150" style="background-color:#F5F5F5"></td></tr>
 <tr><td>X11_Yellow_Green</td><td>#9ACD32</td><td width="150" style="background-color:#9ACD32"></td></tr>
 </table>
-<h2>Alternative X11 color names</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_x11_alt'>Alternative X11 color names</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>X11_Aqua</td><td>#00FFFF</td><td width="150" style="background-color:#00FFFF"></td></tr>
 <tr><td>X11_Black</td><td>#000000</td><td width="150" style="background-color:#000000"></td></tr>
@@ -1737,7 +1761,8 @@ th, td {
 <tr><td>X11_White</td><td>#FFFFFF</td><td width="150" style="background-color:#FFFFFF"></td></tr>
 <tr><td>X11_Yellow</td><td>#FFFF00</td><td width="150" style="background-color:#FFFF00"></td></tr>
 </table>
-<h2>Official LEGO&trade; Colors</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_lego'>Official LEGO&trade; Colors</a></h2>
 <table><tr><th>POV-Ray name</th><th>HEX-value</th><th width="150">Color</th></tr>
 <tr><td>Lego_Black</td><td>#1B2A34</td><td width="150" style="background-color:#1B2A34"></td></tr>
 <tr><td>Lego_Black_Metallic</td><td>#161D32</td><td width="150" style="background-color:#161D32"></td></tr>
@@ -1851,7 +1876,8 @@ th, td {
 <tr><td>Lego_White</td><td>#F2F3F2</td><td width="150" style="background-color:#F2F3F2"></td></tr>
 <tr><td>Lego_Yellow_Flip_Flop</td><td>#B48455</td><td width="150" style="background-color:#B48455"></td></tr>
 </table>
-<h2>PANTONE&trade; Coated colors</h2>
+<p><a href='#nav_toc'>Back to top</a></p>
+<h2><a name='tbl_pantone'>PANTONE&trade; Coated colors</a></h2>
 <table>
 <tr><th>PANTONE Coated name</th><th>POV-Ray name</th><th>HEX-value</th><th>Color</th></tr>
 <tr><td>Reflex Blue C</td><td>farge_PC_Reflex_Blue_C</td><td>#001489</td><td width="150" style="background-color:#001489"></td></tr>
@@ -3196,5 +3222,6 @@ th, td {
 <tr><td>Medium Yellow C</td><td>farge_PC_Medium_Yellow_C</td><td>#FFD900</td><td width="150" style="background-color:#FFD900"></td></tr>
 <tr><td>803 C</td><td>farge_PC_803_C</td><td>#FFE900</td><td width="150" style="background-color:#FFE900"></td></tr>
 </table>
+<p><a href='#nav_toc'>Back to top</a></p>
 </body>
 </html>
