--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Farger.inc documentation</h1>
+    <p>The pages linked below show tables with the color name and the color. Click on the button on the right side to copy the color name for pasting into your POV-Ray sceme file.</p>
     <ul>
       <li><a href="farger_f.html">The named colors</a></li>
       <li><a href="farger_crayola.html">Crayola colors</a></li>
