Documentation fix, update info on new color-file
Documentation fix, update info on new color-file

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -14,6 +14,7 @@
       <li><a href="farger_ral_classic.html">RAL Classic colors</a></li>
       <li><a href="farger_ams595.html">AMS Standard 595 colors</a></li>
       <li><a href="Farger_PC.html">Pant... colors</a></li>
+      <li><a href="Farger_ColorMine.html">ColorMine.org colors</a></li>
     </ul>
   </body>
 </html>
