--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -15,6 +15,7 @@
       <li><a href="farger_ams595.html">AMS Standard 595 colors</a></li>
       <li><a href="Farger_PC.html">Pant... colors</a></li>
       <li><a href="Farger_ColorMine.html">ColorMine.org colors</a></li>
+      <li><a href="farger_color_names.html">meodai/color-names colors</a></li>
     </ul>
   </body>
 </html>
